tests/fixtures/invalid/missing_semicolon.dub
// var declaration missing its semicolon.
fun bad() {
    var x = 1
    return x;
}
